add nbHits icon

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
             width: 96%;
             margin: 0 10px;
         }
-        .type-table, .church-table, .years-facets {
+        .type-table, .info-main-icon, .years-facets {
             margin: 10px;
         }
         .church-td {
