--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
             width: 96%;
             margin: 0 10px;
         }
-        .type-table, .church-table, .years-facets {
+        .type-table, .info-main-icon, .years-facets {
             margin: 10px;
         }
         .church-td {
@@ -25,4 +25,4 @@
         td.note-info {
             text-align: center;
             vertical-align: middle;
-        }</style></head><body><div id="root"></div><script src="vendors~appfa66bee798be3b267975.js"></script><script src="appacf15c8d2e9163b174d7.js"></script></body></html>
+        }</style></head><body><div id="root"></div><script src="vendors~appc9d64292dc07bb9e15d4.js"></script><script src="app71defc24479f09223606.js"></script></body></html>
