--- a/index.html
+++ b/index.html
@@ -25,4 +25,4 @@
         td.note-info {
             text-align: center;
             vertical-align: middle;
-        }</style></head><body><div id="root"></div><script src="vendors~appc9d64292dc07bb9e15d4.js"></script><script src="app71defc24479f09223606.js"></script></body></html>
+        }</style></head><body><div id="root"></div><script src="vendors~appc9d64292dc07bb9e15d4.js"></script><script src="app036d648dde3d90aa78f6.js"></script></body></html>
