--- a/index.html
+++ b/index.html
@@ -25,4 +25,4 @@
         td.note-info {
             text-align: center;
             vertical-align: middle;
-        }</style></head><body><div id="root"></div><script src="vendors~appc9d64292dc07bb9e15d4.js"></script><script src="appbd487c922b7678fcc504.js"></script></body></html>
+        }</style></head><body><div id="root"></div><script src="vendors~app042922423271fb6483c1.js"></script><script src="app9da617b0f3906848de17.js"></script></body></html>
