--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!doctype html><html lang="en"><head><meta charset="UTF-8"><title>Сельхоз перепись</title><meta name="viewport" content="width=device-width,initial-scale=1"><script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><style>#input {
             padding: 5px;
-            width: 96%;
+            width: calc(98vw);
             margin: 0 10px;
         }
-        .type-table, .info-main-icon, .years-facets {
+        .type-table, .info-main-icon, .years-facets, .filter-panel {
             margin: 10px;
+        }
+        @media (min-width: 768px) {
+            .filter-panel {
+                display: flex;
+            }
+        }
+        .basic-multi-select {
+            min-width: 24%;
+            margin: 0 0.4%;
         }
         .church-td {
             max-width: 100px;
@@ -25,4 +34,4 @@
         td.note-info {
             text-align: center;
             vertical-align: middle;
-        }</style></head><body><div id="root"></div><script src="vendors~app042922423271fb6483c1.js"></script><script src="app9da617b0f3906848de17.js"></script></body></html>
+        }</style></head><body><div id="root"></div><script src="vendors~app042922423271fb6483c1.js"></script><script src="appb03d06fa97f36badd928.js"></script></body></html>
