update tooltip info

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,11 @@
                 display: flex;
             }
         }
+        .info-main-icon {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+        }
         .basic-multi-select {
             min-width: 24%;
             margin: 0 0.4%;
