--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
                 display: flex;
             }
         }
+        .info-main-icon {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+        }
         .basic-multi-select {
             min-width: 24%;
             margin: 0 0.4%;
@@ -34,4 +39,4 @@
         td.note-info {
             text-align: center;
             vertical-align: middle;
-        }</style></head><body><div id="root"></div><script src="vendors~app042922423271fb6483c1.js"></script><script src="appb03d06fa97f36badd928.js"></script></body></html>
+        }</style></head><body><div id="root"></div><script src="vendors~app042922423271fb6483c1.js"></script><script src="app7bde5c2733edec064acb.js"></script></body></html>
