--- a/index.html
+++ b/index.html
@@ -39,4 +39,4 @@
         td.note-info {
             text-align: center;
             vertical-align: middle;
-        }</style></head><body><div id="root"></div><script src="vendors~app042922423271fb6483c1.js"></script><script src="app7bde5c2733edec064acb.js"></script></body></html>
+        }</style></head><body><div id="root"></div><script src="vendors~app042922423271fb6483c1.js"></script><script src="appfb587795e0acb129181e.js"></script></body></html>
