--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>Сельхоз перепись</title><meta name="viewport" content="width=device-width,initial-scale=1"><script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><style>#input {
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>Сельхоз перепись</title><meta name="viewport" content="width=device-width,initial-scale=1"><script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><style>.alert-dark {
+            width: 250px;
+            margin: 5% auto;
+            padding: 50px;
+        }
+        #input {
             padding: 5px;
             width: calc(98vw);
             margin: 0 10px;
@@ -10,11 +15,6 @@
             .filter-panel {
                 display: flex;
             }
-        }
-        .info-main-icon {
-            position: absolute;
-            bottom: 0;
-            left: 0;
         }
         .basic-multi-select {
             min-width: 24%;
@@ -39,4 +39,4 @@
         td.note-info {
             text-align: center;
             vertical-align: middle;
-        }</style></head><body><div id="root"></div><script src="vendors~app042922423271fb6483c1.js"></script><script src="app16b045d0e946622ad8d3.js"></script></body></html>
+        }</style></head><body><div id="root"></div><script src="vendors~app9cbbaec4e2364ca57bbc.js"></script><script src="app1e8464b1a22eaabcce19.js"></script></body></html>
