add location tooltip

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,10 @@
         .type-table, .info-main-icon, .years-facets, .filter-panel {
             margin: 10px;
         }
+        .td-place-location {
+            display: flex;
+            justify-content: space-between;
+        }
         @media (min-width: 768px) {
             .filter-panel {
                 display: flex;
