--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         .type-table, .info-main-icon, .years-facets, .filter-panel {
             margin: 10px;
         }
+        .td-place-location {
+            display: flex;
+            justify-content: space-between;
+        }
         @media (min-width: 768px) {
             .filter-panel {
                 display: flex;
@@ -39,4 +43,4 @@
         td.note-info {
             text-align: center;
             vertical-align: middle;
-        }</style></head><body><div id="root"></div><script src="vendors~app9cbbaec4e2364ca57bbc.js"></script><script src="app1e8464b1a22eaabcce19.js"></script></body></html>
+        }</style></head><body><div id="root"></div><script src="vendors~app2ff9f43a5ef4f1a81c9d.js"></script><script src="app83af8e6ce358cbf157cb.js"></script></body></html>
