--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>Сельхоз перепись</title><meta name="viewport" content="width=device-width,initial-scale=1"><script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><style>.alert-dark {
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>Сельхоз перепись</title><meta name="viewport" content="width=device-width,initial-scale=1"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"><style>.alert-dark {
             width: 250px;
             margin: 5% auto;
             padding: 50px;
@@ -43,4 +43,4 @@
         td.note-info {
             text-align: center;
             vertical-align: middle;
-        }</style></head><body><div id="root"></div><script src="vendors~app2ff9f43a5ef4f1a81c9d.js"></script><script src="app83af8e6ce358cbf157cb.js"></script></body></html>
+        }</style></head><body><div id="root"></div><script src="vendors~app78d98f291ca28a66ba90.js"></script><script src="app4a3dda12214e360964f5.js"></script></body></html>
