--- a/index.html
+++ b/index.html
@@ -43,4 +43,4 @@
         td.note-info {
             text-align: center;
             vertical-align: middle;
-        }</style></head><body><div id="root"></div><script src="vendors~app78d98f291ca28a66ba90.js"></script><script src="appe307a2f27b2bcca517a8.js"></script></body></html>
+        }</style></head><body><div id="root"></div><script src="vendors~app78d98f291ca28a66ba90.js"></script><script src="app449055dad8a00459883f.js"></script></body></html>
