--- a/index.html
+++ b/index.html
@@ -43,4 +43,4 @@
         td.note-info {
             text-align: center;
             vertical-align: middle;
-        }</style></head><body><div id="root"></div><script src="vendors~app78d98f291ca28a66ba90.js"></script><script src="app449055dad8a00459883f.js"></script></body></html>
+        }</style></head><body><div id="root"></div><script src="vendors~app0e98b0d94b05c4d2c1e9.js"></script><script src="app464534bb0b6aa7ea1f13.js"></script></body></html>
