--- a/index.html
+++ b/index.html
@@ -43,4 +43,4 @@
         td.note-info {
             text-align: center;
             vertical-align: middle;
-        }</style></head><body><div id="root"></div><script src="vendors~appa67dd034aed5a5301326.js"></script><script src="app56f01e0a875ef168cdc5.js"></script></body></html>
+        }</style></head><body><div id="root"></div><script src="vendors~appa67dd034aed5a5301326.js"></script><script src="app4ac6168fd03c419f4870.js"></script></body></html>
